# pydd

./: .gitattributes  .gitignore  LICENSE  README.md  analysis_jax.py  basic-checks.ipynb  binary.py  binary_jax.py  binary_torch.py  dephasing-snr.ipynb  interp2d.py  noise.py  plot_style.mplstyle  rwmh.ipynb  setup.cfg  test_binary.py  test_hypgeom_interp.py  test_interp2d.py  testing.ipynb
notebooks/: README.md  Untitled.ipynb  basic-checks.ipynb  brentq-jax.ipynb  calc_vacuum_fits.py  dephasing-snr.ipynb  dephasing.ipynb  earth-based-ns-plotting.ipynb  earth-based-ns-plotting.py  earth-based-ns.ipynb  earth-based-ns.py  earth-based-plotting.ipynb  earth-based.ipynb  example.ipynb  f_b_scaling.ipynb  fb_fits.npz  fit_f_b.ipynb  frequency-window-checks.ipynb  hyp2f1-dev.ipynb  interp2d-dev.ipynb  job_discoverability.sh  multiband.ipynb  ns-results-evidence.pkl  plot_vacuum_fits.py  run_ns.py  rwmh.ipynb  snr.ipynb  spectral-index.ipynb  stationary-phase-approx-check.ipynb  svi.ipynb  tutorial.ipynb  utils.py  vacuum-fit-check.ipynb
scripts/: README.md  calc_pbh_vac_fits.py  calc_vacuum_fits.py  fit_fb.py  job_discoverability.sh  job_measurability.sh  load_strains.py  load_strains_approx.py  plot_compare.py  plot_dephasing.py  plot_fb.py  plot_measurability.py  plot_pbh_vac_fits.py  plot_snr.py  plot_snr_lisa.py  plot_snr_terrestrial.py  plot_snrs_terrestrial.py  plot_trajectories_noise.py  plot_vacuum_fits.py  run_ns.py  run_pbh_ns_2d.py  run_pbh_ns_4d.py  run_pbh_ns_v.py  speed_test.py  speed_test_lisa.py  speed_test_np.py  speed_test_np_v.py  speed_test_v.py  utils.py
(+116 files in other folders)
