[metadata]
# replace with your username:
name = pydd
version = 0.0.1
author = Adam Coogan, Bradley Kavanagh
author_email = dr.adam.coogan@gmail.com
description = Dark dresses in python
long_description = file: README.md
long_description_content_type = text/markdown
keywords = dark matter, black holes, gravitational waves, jax
url = https://github.com/adam-coogan/pydd
project_urls =
    Bug Tracker = https://github.com/adam-coogan/pydd/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires =
    numpy
    scipy
    jax
    jaxlib

[options.packages.find]
where = src
